[package]
name = "clevel"
version = "0.1.0"
authors = ["reidond"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
clap = "2.33.0"
ron = "0.5.1"
serde = "1.0.104"
serde_json = "1.0.48"
lazy_static = "1.4.0"
simple-matrix = "0.1.2"
wasm-bindgen = "0.2.58"
console_error_panic_hook = { version = "0.1.6", optional = true }
wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.8"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
