[package]
name = "clevel"
version = "0.1.7"
description = "Assessment of expert competence"
authors = [ "Andrii Shafar <andreyshafar@gmail.com>" ]
repository = "https://github.com/Reidond/clevel"
homepage = "https://clevel-app.now.sh"
readme = "README.md"
license-file = "LICENSE"
keywords = ["wasm", "library", "assessment", "expert", "competence"]
categories = ["wasm", "parsing", "data-structures", "command-line-utilities"]
edition = "2018"
exclude = [
    "examples/",
    "pkg/",
    ".vscode/",
    "clevel_app",
    "clevel-app.code-workspace",
    ".editorconfig",
    ".gitignore"
]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
clap = "2.33.0"
ron = "0.5.1"
serde = "1.0.104"
serde_json = "1.0.48"
lazy_static = "1.4.0"
simple-matrix = "0.1.2"
wasm-bindgen = "0.2.59"
console_error_panic_hook = { version = "0.1.6", optional = true }
wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.8"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

[badges]
maintenance = { status = "as-is" }
