[package]
name = "clevel_app"
version = "0.1.0"
description = "Assessment of expert competence"
author = [ "Andrii Shafar <andreyshafar@gmail.com>" ]
license = "GPLv3"
repository = "https://github.com/Reidond/clevel"
default-run = "clevel"
edition = "2018"
build = "src/build.rs"

[package.metadata.bundle]
identifier = "com.tauri.dev"
icon = [
  "icons/32x32.png",
  "icons/128x128.png",
  "icons/128x128@2x.png",
  "icons/icon.icns",
  "icons/icon.ico"
]

[dependencies]
serde_json = "1.0"
clevel = { path = "../../" }
serde = { version = "1.0", features = [ "derive" ] }
tauri = { version = "0.4", features = [ "all-api", "edge" ] }

[target."cfg(windows)".build-dependencies]
winres = "0.1"

[features]
dev-server = [ "tauri/dev-server" ]
embedded-server = [ "tauri/embedded-server" ]
no-server = [ "tauri/no-server" ]

[[bin]]
name = "clevel"
path = "src/main.rs"
